--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,8 @@ layout: default
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="post-heading">
-            {% if page.url %}
-            <h1><a href={{page.url}}>{{page.title }}</a></h1>
+            {% if page.link %}
+            <h1><a href={{page.link}}>{{page.title }}</a></h1>
             {% else %}
             <h1>{{page.title }}</h1>
             {% endif %}
