--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1,2 +1,17 @@
 // Import Core Clean Blog SCSS
 @import "../assets/vendor/startbootstrap-clean-blog/scss/styles.scss";
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  // table columns
+  th {
+    text-align: center;
+  }
+  // table lines
+  td {
+    height: 30px;
+    text-align: center;
+  }
