cv, contact form up, attempt linkedin_url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,9 +37,9 @@
             </a>
           </li>
           {% endif %}
-          {% if site.linkedin_username %}
+          {% if site.linkedin_url %}
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
+            <a href="{{site.linkedin_url}}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
