--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
+          <!--
           {% if site.email %}
           <li class="list-inline-item">
             <a href="mailto:{{ site.email | encode_email }}">
@@ -17,6 +18,15 @@
             </a>
           </li>
           {% endif %}
+          -->
+          <li class="list-inline-item">
+            <a href="contact.html">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="far fa-envelope fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
           {% if site.twitter_username %}
           <li class="list-inline-item">
             <a href="https://twitter.com/{{ site.twitter_username }}">
@@ -27,6 +37,7 @@
             </a>
           </li>
           {% endif %}
+          <!--
           {% if site.facebook_username %}
           <li class="list-inline-item">
             <a href="https://www.facebook.com/{{ site.facebook_username }}">
@@ -37,6 +48,7 @@
             </a>
           </li>
           {% endif %}
+          -->
           {% if site.linkedin_url %}
           <li class="list-inline-item">
             <a href="{{site.linkedin_url}}">
@@ -63,6 +75,16 @@
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
+          {% if site.chess(dot)com_username %}
+          <li class="list-inline-item">
+            <a href="https://chess.com/{{ site.chess(dot)com_username }}">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-chess-pawn fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
