correct chess.com url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -81,7 +81,7 @@
           {% endif %}
           {% if site.chess(dot)com_username %}
           <li class="list-inline-item">
-            <a href="https://chess.com/{{ site.chess(dot)com_username }}">
+            <a href="https://chess.com/member/{{ site.chess(dot)com_username }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-chess-pawn fa-stack-1x fa-inverse"></i>
