--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,16 +79,14 @@
             </a>
           </li>
           {% endif %}
-          {% if site.chess(dot)com_username %}
           <li class="list-inline-item">
-            <a href="https://chess.com/member/{{ site.chess(dot)com_username }}">
+            <a href="https://chess.com/member/bananuete">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-chess-pawn fa-stack-1x fa-inverse"></i>
+                <i class="fas fa-solid fa-chess-pawn fa-stack-1x  fa-inverse"></i> 
               </span>
             </a>
           </li>
-          {% endif %}
         </ul>
         <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
       </div>
