--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,10 @@ layout: default
         <article class="post-preview">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
             <h2 class="post-title">{{ post.title }}</h2>
-            {% if post.subtitle %}
+            {% if post.subtitle and post.skills %}
+            <h6 class="post-skills"">{{ post.skills }}</h6>
+            <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+            {% else if post.subtitle %}
             <h3 class="post-subtitle">{{ post.subtitle }}</h3>
             {% else %}
             <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
