--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,9 +16,12 @@ layout: default
             {% if page.link %}
             <h1><a href={{page.link}}>{{page.title }}</a></h1>
             {% else %}
-            <h1>{{page.title }}</h1>
+            <h1>{{ page.title }}</h1>
             {% endif %}
-            {% if page.subtitle %}
+            {% if page.subtitle and page.skills %}
+            <h5 class="skills-heading">{{ page.skills }}</h5>
+            <h2 class="subheading">{{ page.subtitle }}</h2>
+            {% else if page.subtitle %}
             <h2 class="subheading">{{ page.subtitle }}</h2>
             {% endif %}
             <span class="meta">{{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
