bg, styling in about post and posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-
+        <a href="{{page.link}}" style="font-size: smaller;"><em>Link to the GitHub page</em></a>
         {{ content }}
 
         <hr>
