--- a/assets/style.css
+++ b/assets/style.css
@@ -23,14 +23,14 @@ article h1{
     font-size: 50px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #AABDBF;
+    color: #8C9593;
 }
 
 article h1::after{
     content: "";
     height: 3px;
     width: 225px;
-    background-color: #AABDBF;
+    background-color: #8C9593;
     display: block;
     margin: auto;
 }
@@ -42,11 +42,11 @@ img{
     height: 250px;
     width: 250px;
     border-radius: 50%;
-    border: 3px solid #AABDBF;
+    border: 3px solid #8C9593;
 }
 content{
     font-size: 17px;
-    color: #AABDBF;
+    color: #8C9593;
     line-height: 1.5;
 }
 article h5{
@@ -54,9 +54,9 @@ article h5{
     font-size: 32px;
     font-weight: 500;
     margin-top: 30px;
-    color: #AABDBF;
+    color: #8C9593;
 }
 article p{
     font-size: 18px;
-    color: #AABDBF;
+    color: #8C9593;
 }
